fixed contrast issue; working in mqs

--- a/styles/sass/_animeInfo.scss
+++ b/styles/sass/_animeInfo.scss
@@ -25,10 +25,10 @@
             }
         .takeQuiz {
             cursor: pointer;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             color: $secondaryTextColor;
             font-weight: 400;
-            width: 50%;
+            width: 45%;
             background-color: $primaryTextColor;
             padding: 10px 5px;
             border-radius: 12px;
