--- a/styles/sass/_mixins.scss
+++ b/styles/sass/_mixins.scss
@@ -1,5 +1,4 @@
 @mixin mainButton {
-    margin-top: 50px;
     padding: 15px 25px;
     border: none;
     font-family: 'Playfair Display', serif;
@@ -17,7 +16,7 @@
 @mixin warningStyle {
     color: $primaryTextColor;
     text-transform: uppercase;
-    background-color: $secondaryColor;
+    background-color: $secondaryTextColor;
     position: absolute;
     bottom: 10px;
     width: 100%;
