--- a/styles/sass/_quiz.scss
+++ b/styles/sass/_quiz.scss
@@ -3,7 +3,7 @@
 }
 
 .quiz {
-    background-color: darken($tertiaryColor, 1.5);
+    background-color: $secondaryColor;
         h2 {
             font-size: 1.8rem;
         }
@@ -45,7 +45,7 @@ form {
 }
 
 .questionImage img:hover {
-    box-shadow: 5px 6px 0 $secondaryTextColor, 10px 12px 0 $secondaryColor;
+    box-shadow: 5px 6px 0 $secondaryColor, 10px 12px 0 $secondaryTextColor;
 }
 
 
@@ -92,7 +92,12 @@ input[type="radio"]:checked + label {
     color: $primaryTextColor;
     padding: 5px 3px;
     box-shadow: 5px 5px 0 $secondaryTextColor, 10px 10px 0 $secondaryColor;
-    font-size: 0.9rem;
+    font-size: 10rem;
+}
+
+.submitOptionButton {
+    display: inline-block;
+    margin-top: 25px;
 }
 
 .nextQuestionBtn,
@@ -106,7 +111,6 @@ input[type=submit]:hover {
 
 input[type=submit]:disabled {
     color: $primaryTextColor;
-    font-size: 1.5rem;
     background-color: $secondaryTextColor;
     opacity: 50%;
     cursor: auto;
@@ -125,14 +129,14 @@ input[type=submit]:disabled {
     border-radius: 15px;
     background-color: $secondaryTextColor;
     color: $primaryTextColor;
-    font-size: 4rem;
+    font-size: 3.5rem;
     margin: 0;
     transition: all 0.3s ease;
     box-shadow: 0px 7px 0 $headerColor;
 }
 
 .takeToResultBtn:hover {
-    font-size: 4.5rem;
+    font-size: 4rem;
     color: $secondaryColor;
     background-color: $headerColor;
     box-shadow: 0px 10px 0 $secondaryTextColor;
