--- a/styles/sass/_results.scss
+++ b/styles/sass/_results.scss
@@ -75,8 +75,12 @@
 
     .notMineArt {
         font-size: 0.8rem;
-        color: $headerColor;
+        color: $secondaryTextColor;
         line-height: 20px;
+        text-transform: uppercase;
+        span {
+            font-style: italic;
+        }
     }
 }
 
