--- a/styles/styles.css
+++ b/styles/styles.css
@@ -464,10 +464,10 @@ main {
 
 .animeInfo .takeQuiz {
   cursor: pointer;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: #C3DFE0;
   font-weight: 400;
-  width: 50%;
+  width: 45%;
   background-color: #424B54;
   padding: 10px 5px;
   border-radius: 12px;
@@ -478,7 +478,7 @@ main {
 }
 
 .quiz {
-  background-color: #f3c5c0;
+  background-color: #F4AFAB;
 }
 
 .quiz h2 {
@@ -539,8 +539,8 @@ form .questionBox {
 }
 
 .questionImage img:hover {
-  -webkit-box-shadow: 5px 6px 0 #C3DFE0, 10px 12px 0 #F4AFAB;
-          box-shadow: 5px 6px 0 #C3DFE0, 10px 12px 0 #F4AFAB;
+  -webkit-box-shadow: 5px 6px 0 #F4AFAB, 10px 12px 0 #C3DFE0;
+          box-shadow: 5px 6px 0 #F4AFAB, 10px 12px 0 #C3DFE0;
 }
 
 .optionContainer {
@@ -587,12 +587,16 @@ input[type="radio"]:checked + label {
   padding: 5px 3px;
   -webkit-box-shadow: 5px 5px 0 #C3DFE0, 10px 10px 0 #F4AFAB;
           box-shadow: 5px 5px 0 #C3DFE0, 10px 10px 0 #F4AFAB;
-  font-size: 0.9rem;
+  font-size: 10rem;
+}
+
+.submitOptionButton {
+  display: inline-block;
+  margin-top: 25px;
 }
 
 .nextQuestionBtn,
 .takeToResultBtn {
-  margin-top: 50px;
   padding: 15px 25px;
   border: none;
   font-family: 'Playfair Display', serif;
@@ -614,7 +618,6 @@ input[type=submit]:hover {
 
 input[type=submit]:disabled {
   color: #424B54;
-  font-size: 1.5rem;
   background-color: #C3DFE0;
   opacity: 50%;
   cursor: auto;
@@ -639,7 +642,7 @@ input[type=submit]:disabled {
   border-radius: 15px;
   background-color: #C3DFE0;
   color: #424B54;
-  font-size: 4rem;
+  font-size: 3.5rem;
   margin: 0;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
@@ -648,7 +651,7 @@ input[type=submit]:disabled {
 }
 
 .takeToResultBtn:hover {
-  font-size: 4.5rem;
+  font-size: 4rem;
   color: #F4AFAB;
   background-color: #F7EDF0;
   -webkit-box-shadow: 0px 10px 0 #C3DFE0;
@@ -685,7 +688,7 @@ input[type=submit]:disabled {
 .resultSectionWarning {
   color: #424B54;
   text-transform: uppercase;
-  background-color: #F4AFAB;
+  background-color: #C3DFE0;
   position: absolute;
   bottom: 10px;
   width: 100%;
@@ -794,8 +797,13 @@ input[type=submit]:disabled {
 
 .resultText .notMineArt {
   font-size: 0.8rem;
-  color: #F7EDF0;
+  color: #C3DFE0;
   line-height: 20px;
+  text-transform: uppercase;
+}
+
+.resultText .notMineArt span {
+  font-style: italic;
 }
 
 .resultText a:hover {
@@ -870,10 +878,89 @@ input[type=submit]:disabled {
   opacity: 0;
 }
 
-@media (max-width: 987px) {
-  .secondQuestionContainer .questionImage, .fourthQuestionContainer .questionImage {
-    -webkit-box-ordinal-group: 1;
-        -ms-flex-order: 0;
-            order: 0;
+@media (max-width: 1230px) {
+  h1 span {
+    font-size: 6rem;
+  }
+  .questionMark {
+    font-size: 4.5rem;
+  }
+  .mainButtons .takeQuiz {
+    font-size: 1.8rem;
+  }
+  .mainButtons .takeToInfo {
+    font-size: 1.1rem;
+  }
+  .animeInfo h2 {
+    font-size: 4rem;
+  }
+  .animeInfo h3 {
+    font-size: 2.2rem;
+  }
+  .animeInfo p {
+    font-size: 0.85rem;
+    letter-spacing: 0.5px;
+  }
+  form .questionBox {
+    padding-right: 0px;
+  }
+  .quiz h2 {
+    font-size: 1.5rem;
+  }
+  .quiz h3 {
+    font-size: 0.8rem;
+    text-transform: uppercase;
+  }
+  label {
+    font-size: 0.75rem;
+  }
+  input[type="radio"]:checked + label {
+    font-size: 0.8rem;
+  }
+  .nextQuestionBtn,
+  .takeToResultBtn {
+    font-size: 1.2rem;
+  }
+  input[type=submit]:hover {
+    font-size: 1.5rem;
+  }
+  .takeToResultBtn {
+    font-size: 2.8rem;
+  }
+  .takeToResultBtn:hover {
+    font-size: 3.2rem;
+  }
+  .additionalEffect h2 {
+    font-size: 3rem;
+    text-align: center;
+  }
+  .additionalEffect .fa-star {
+    font-size: 2.9rem;
+    margin: 10px;
+  }
+  .resultTitle h2 {
+    font-size: 2rem;
+    text-align: center;
+  }
+  .resultText p {
+    font-size: 0.85rem;
+    letter-spacing: 0.5px;
+  }
+  .resultButtons {
+    margin: 25px;
+  }
+  .warning,
+  .resultSectionWarning {
+    bottom: 50px;
+    text-align: center;
+    font-size: 1.5rem;
+  }
+  .warning p,
+  .resultSectionWarning p {
+    padding: 10px 0;
+  }
+  .notMineArt {
+    font-size: 0.7rem;
+    letter-spacing: 0.5px;
   }
 }
